syntax = "proto3";

package keyauth.role;
option go_package = "github.com/infraboard/keyauth/pkg/role";

import "github.com/infraboard/mcube/cmd/protoc-gen-go-ext/extension/tag/tag.proto";
import "pkg/role/pb/enum.proto";

// Role is rbac's role
message Role {
    // 角色ID
    string id = 1[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"_id" json:"id"'}
        ];
    // 创建时间`
    int64 create_at = 2[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"create_at" json:"create_at"'}
        ];
    // 更新时间
    int64 update_at = 3[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"update_at" json:"update_at"'}
        ];
    // 角色所属域
    string domain = 4[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"domain" json:"domain"'}
        ];
    // 创建人
    string creater = 5[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"creater" json:"creater"'}
        ];
    // 角色类型
    RoleType type = 6[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"type" json:"type"'}
        ];
    // 应用名称
    string name = 7[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"name" json:"name"'}
        ];
    // 应用简单的描述
    string description =8[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"description" json:"description"'}
        ];
    // 角色关联的一些额外的meta信息, 比如前端视图
    map<string, string> meta =10[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"meta" json:"meta"'}
        ];
    // 读权限
    repeated Permission permissions = 9[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"-" json:"permissions,omitempty"'}
        ]; 
    // 范围, 角色范围限制, 由策略引擎动态补充
    string scope = 11 [
        (google.protobuf.field_tag) = {struct_tag: 'bson:"-" json:"scope"'}
        ];
}

// Permission 权限
message Permission {
    // id
    string id = 1[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"_id" json:"id"'}
        ];
    // 关联角色ID
    string role_id = 2[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"role_id" json:"role_id"'}
        ];
    // 创建时间
    int64 create_at = 3[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"create_at" json:"create_at"'}
        ];
    // 创建人
    string creater = 4[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"creater" json:"creater"'}
        ];
     // 效力
    EffectType effect = 5[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"effect" json:"effect"'}
        ];
    // 服务ID
    string service_id = 6[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"service_id" json:"service_id"'}
        ];
    // 资源列表
    string resource_name = 7[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"resource_name" json:"resource_name"'}
        ];
    // 维度
    string label_key = 8[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"label_key" json:"label_key"'}
        ];
    // 适配所有值
    bool match_all = 9[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"match_all" json:"match_all"'}
        ];
    // 标识值
    repeated string label_values = 10[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"label_values" json:"label_values"'}
        ]; 
    // 范围, 角色范围限制, 由策略引擎动态补充
    string scope = 11 [
        (google.protobuf.field_tag) = {struct_tag: 'bson:"-" json:"scope"'}
        ];
    // 权限描述
    string desc = 12 [
        (google.protobuf.field_tag) = {struct_tag: 'bson:"desc" json:"desc"'}
        ];
}

message Set {
    int64 total = 1[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"total" json:"total"'}
        ];
    repeated Role items = 2[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"items" json:"items"'}
        ];
}

// PermissionSet 用户列表
message PermissionSet {
    int64 total = 1[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"total" json:"total"'}
        ];
    repeated Permission items = 2[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"items" json:"items"'}
        ];
}